Pending changes in the mainline
===============================

General
-------

* Added a storage cache in RAM to avoid reading the same files multiple times from 
  the storage.  This greatly improves, among other things, the performance of WADO-RS
  retrieval of individual frames of multiframe instances.
* New configuration option "MaximumStorageCacheSize" to configure the size of
  the new storage cache.
* New configuration option "ZipLoaderThreads" to configure the number of threads used
  to read instances from storage when createing a Zip archive/media.
* Support decoding of black-and-white images (with 1 bit per pixel), notably DICOM SEG
* Added links to download attachments from the Orthanc Explorer

Maintenance
-----------

* Fix handling of option "DeidentifyLogs", notably for tags (0010,0010) and (0010,0020)
* New configuration options:
  - "DicomThreadsCount" to set the number of threads in the embedded DICOM server
* Fix instances accumulating in DB while their attachments were not stored because of 
  MaximumStorageSize limit reached with a single patient in DB.

REST API
--------

* API version upgraded to 16
* If an image can not be decoded, ../preview and ../rendered routes are now returning 
  unsupported.png only if the ?returnUnsupportedImage option is specified; otherwise, 
  it raises a 415 error code.
* Archive jobs response now contains a header Content-Disposition:filename='archive.zip'
* "/instances/{...}/frames/{...}/numpy": Download the frame as a Python numpy array
* "/instances/{...}/numpy": Download the instance as a Python numpy array
* "/series/{...}/numpy": Download the series as a Python numpy array
* Added a ?full option to "/patients|studies|series|instances/{...}/attachments" route
  to show the mapping alias<->numerical id.
* Added "/patients|studies|series|instances/{...}/attachments/{...}/info" route to retrieve
  the full information about an attachment (size, type, MD5 and UUID)

Lua
---
